2005-03-25  Philippe Gerum  <rpm@xenomai.org>

	* testsuite/[k]latency: Pass seconds to test duration switch (-T)
	instead of minutes.

2005-03-24  Jim Cromie <jcromie@divsol.com>

	* testsuite/klatency/latency.c, testsuite/latency/latency.c:
	Various user-level improvements including histogram dump for
	kernel space latency test.

2005-03-24  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/heap.c (__va_to_kva): Provide support for PAE.

	* include/nucleus/asm-i386/system.h (xnarch_restore_fpu): Use
	tsk_used_math() macro when defined (2.6.11 and above).

2005-03-23  Philippe Gerum  <rpm@xenomai.org>

	* nucleus/pod.c (xnpod_schedule, xnpod_schedule_runnable): Get rid
	of the borked sanity check for NULL return upon pulling the next
	thread from the readyq. It could not work (link2thread() would
	garble the NULL pointer thus preventing the detection of such
	value) and is now useless anyway.

2005-03-22  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-ppc/system.h (xnarch_switch_to): Do not set
	ALTIVEC or SPE ownership bit to the next thread: leave it to lazy
	handling.

2005-03-20  Heikki Lindholm <holindho@cs.helsinki.fi>

	* include/nucleus/asm-ppc/system.h (xnarch_switch_to): Make sure
	that r2 always references "current" before calling Linux's
	_switch() routine.

2005-03-19  Philippe Gerum  <rpm@xenomai.org>

	* TROUBLESHOOTING: Add entry for lapic issue.

2005-03-18  Philippe Gerum  <rpm@xenomai.org>

	* scripts/GNUmakefile.am (install-exec-local): Add post-install
	hook.

2005-03-16  Philippe Gerum  <rpm@xenomai.org>

	* include/nucleus/asm-*/system.h (xnarch_switch_to): Add membar
	after switch with mm change.

	* nucleus/module.c (stat_read_proc): Add /proc/rtai/stat entry
	aimed at giving various statistics about the schedulable objects.

2005-03-15  Jim Cromie <jcromie@divsol.com>

	* testsuite/latency: Add test duration switch (-T).

	* fusion: Corrected some grammatics in comments.

2005-03-14  Philippe Gerum  <rpm@xenomai.org>
