@@ -156,9 +156,21 @@ asm (".L__X'%ebx = 1\n\t"
 #include <linux/errno.h>
 #include <asm/uaccess.h>
 
-/* Make sure to bypass might_sleep() checks -- caller cannot fault. */
-#define __xn_copy_from_user(task,dstP,srcP,n)  __copy_from_user_inatomic(dstP,srcP,n)
-#define __xn_copy_to_user(task,dstP,srcP,n)    __copy_to_user_inatomic(dstP,srcP,n)
+/* Our own set of copy-to/from-user macros which must bypass
+   might_sleep() checks. The caller cannot fault so we don't care of
+   the result. The apparently preposterous do-while bracketing just
+   helps silencing GCC's "warn_unused_result" attribute on the related
+   kernel macros. */
+#define __xn_copy_from_user(task,dstP,srcP,n)  \
+do { \
+    if (__copy_from_user_inatomic(dstP,srcP,n)) \
+        ; \
+} while(0)
+#define __xn_copy_to_user(task,dstP,srcP,n)  \
+do { \
+    if (__copy_to_user_inatomic(dstP,srcP,n)) \
+        ; \
+} while(0)
 #define __xn_put_user(task,src,dstP)           __put_user(src,dstP)
 #define __xn_get_user(task,dst,srcP)           __get_user(dst,srcP)
 
